# tinyML

./: .gitignore  BaoCaoDuAn.docx  CLAUDE.md  CẤU TRÚC BÁO CÁO.docx  README.md  pyproject.toml  requirements.txt  slides.html
.claude/: plan.md  settings.local.json
docs/: BaoCaoDoAn.docx  BaoCaoDuAn.docx
esp32/: benchmark_n100.txt  benchmark_sweep.txt  platformio.ini
esp32/include/: feature_bench.h  kernels.h  model_cnn.h  model_crnn.h  model_lstm.h  model_rf.h  model_svm.h  model_xgb.h  test_data.h
esp32/src/: main.cpp
results/: BaoCao_TinyML_ECG.docx  cleaning_stats.json  summary.csv  winners.json
results/archive/: serial_raw_group_a.txt  serial_raw_group_b.txt  summary_v1_before_clean.csv
src/: analyze.py  cnn.py  config.py  io.py  lstm.py  rf.py  seeding.py  svm.py  utils.py
src/analysis/: __init__.py  analyze.py  common.py  feasibility.py  load.py  plots.py  report.py  selection.py  writers.py
src/data/: __init__.py  assembly.py  benchmark.py  download.py  features.py  preprocess.py  segmentation.py
src/evaluation/: __init__.py  metrics.py  operating_point.py
src/models/: __init__.py  cost.py
src/models/cnn/: __init__.py  __main__.py  architecture.py  inference.py  sweep.py  training.py
src/models/crnn/: __init__.py  __main__.py  architecture.py  sweep.py
src/models/lstm/: __init__.py  __main__.py  architecture.py  inference.py  sweep.py  training.py
src/training/: __init__.py  multiseed.py
tools/: export_esp32.py  html_to_pptx.py  inspect_dataset.py  make_beat_figures.py  make_report.py  make_slides.py  multiseed.py  read_serial.py
(+12 files in other folders)
